# llm-local-router

./: .gitignore  .vscodeignore  AGENTS.md  BUILD.bazel  DESIGN.md  README.md  ROADMAP.md  TODO-testing.md  TODO.md  launch_and_promotion.md  package-lock.json  package.json  run-tests.sh  tsconfig.json
.husky/: pre-commit  pre-push
src/: composite.ts  config-converter.ts  health-checker.ts  language-model-provider.ts  llm-client.ts  logger.ts  main.ts  metrics-collector.ts  metrics-server.ts  metrics-storage.ts  model-registry.ts  provider-client.ts  router-config-provider.ts  secret-storage.ts  types.ts
src/__tests__/: composite.test.ts  config-converter.test.ts  llm-client.test.ts  metrics-collector.test.ts  metrics-server.test.ts  model-registry.test.ts  providers.test.ts
src/providers/: anthropic.ts  baseten.ts  bedrock.ts  dashscope.ts  deepseek.ts  fireworks.ts  google.ts  lmstudio.ts  minimax.ts  mistral.ts  moonshot.ts  ollama.ts  openai.ts  openrouter.ts  requesty.ts  sambanova.ts  unbound.ts  vercel-ai-gateway.ts  vertex.ts  xai.ts  xiaomi.ts  zai.ts  zhipu.ts
webview-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webview-ui/src/: App.tsx  index.css  types.ts
webview-ui/src/components/: AboutPanel.tsx  ActionBar.tsx  CapabilityPreview.tsx  CompositeEditor.tsx  CompositeList.tsx  ConfigEditor.tsx  ConfigPanel.tsx  ConfigSection.tsx  ErrorBoundary.tsx  HelpPanel.tsx  JsonPreview.tsx  MetricsPanel.tsx  ModelList.tsx  ModelPicker.tsx  NumberInput.tsx  ProvidersPanel.tsx  StatusPanel.tsx  StrategySelector.tsx
webview-ui/src/utils/: vscode.ts
