"""Bazel build rules for LLM Local Router VSCode extension."""

load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")

genrule(
    name = "build_extension",
    srcs = glob([
        "src/**/*.ts",
        "vendor/vscode-dts/*.d.ts",
        "package.json",
        "package-lock.json",
        "tsconfig.json",
    ]),
    outs = ["main.js"],
    cmd = "$(location //extensions/llm-local-router:build_script) > $@",
    local = True,
    tools = ["//extensions/llm-local-router:build_script"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "build_script",
    outs = ["build.sh"],
    cmd = """cat > $@ << 'EOF'
#!/bin/bash
set -e
cd extensions/llm-local-router
npm ci --ignore-scripts
npm run compile
cat out/main.js
EOF
chmod +x $@
""",
)

genrule(
    name = "package_script",
    outs = ["package.sh"],
    cmd = """cat > $@ << 'EOF'
#!/bin/bash
set -e
cd extensions/llm-local-router
npm ci --ignore-scripts >&2
npm run compile >&2
npx @vscode/vsce package --no-update-package-json >&2
VERSION=$$(node -p "require('./package.json').version")
mv "llm-local-router-$${VERSION}.vsix" llm-local-router.vsix
cat llm-local-router.vsix
EOF
chmod +x $@
""",
)

genrule(
    name = "package",
    srcs = glob([
        "src/**/*.ts",
        "vendor/vscode-dts/*.d.ts",
        "package.json",
        "package-lock.json",
        "tsconfig.json",
        "README.md",
    ]),
    outs = ["llm-local-router.vsix"],
    cmd = "$(location //extensions/llm-local-router:package_script) > $@",
    local = True,
    tags = ["requires-network"],
    tools = ["//extensions/llm-local-router:package_script"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "src",
    srcs = glob([
        "src/**/*",
        "package.json",
        "package-lock.json",
        "tsconfig.json",
    ]),
    visibility = ["//visibility:public"],
)
